Add RivieraJug Hazelcast event

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img src="./images/docker.png"/>
         </div>
         <div class="date">18 janvier 2018</div>
-          <p>Gérez vos environnements Docker en toute simplicité avec Portainer</p>
+          <p><b>Anthony Lapenna</b> viendra nous présenter <b>Portainer</b> pour gérez vos environnements Docker en toute simplicité</p>
           <a class="bnt-more" href="https://www.meetup.com/fr-FR/Docker-Nice/events/245650434/">More</a>
         </div>
       </div>   
@@ -40,7 +40,7 @@
           <h2>Meetup Hashicorp</h2>
           <img src="./images/hashicorp.png"/>
        	  <div class="date">23 janvier 2018</div>
-            <p>Introduction à Terraform et Vault.</p>
+            <p>Thomas Sarboni</b> fera une introduction à <b>Terraform</b>, <b>David Calvert</b> nous présentera <b>Vault</b></p>
             <a class="bnt-more" href="https://www.meetup.com/fr-FR/Sophia-Antipolis-HashiCorp-User-Group/events/246742297/">More</a>
         </div>
       </div> 
@@ -53,7 +53,7 @@
           <img src="./images/telecomvalley.png"/>
         </div>
         <div class="date">25 janvier 2018</div>
-          <p>Retour d'expérience sur l'utilisation de Kafka par Sébastien Alegret de GreenCom Network.</p>
+          <p>Retour d'expérience sur l'utilisation de <b>Kafka</b> par <b>Sébastien Alegret</b> de GreenCom Network.</p>
           <a class="bnt-more" href="http://www.telecom-valley.fr/25-janvier-commission-open-source/">More</a>
         </div>
       </div>   
@@ -64,10 +64,23 @@
           <h2>Meetup CNCF</h2>
           <img src="./images/cncf.png"/>
        	  <div class="date">29 janvier 2018</div>
-            <p>Monitorer votre système et vos applications avec Prometheus</p>
+            <p><b>Cédric Lamorinière</b> et <b>David Benque</b> vous présenterons <b>Prometheus</b> une solution de monitoring pour le système et les applications</p>
             <a class="bnt-more" href="https://www.meetup.com/fr-FR/CNCF-Cloud-Native-Computing-Sophia-Antipolis/events/246424155/">More</a>
         </div>
       </div> 
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInRight">
+        <div class="timeline-img-header">
+          <h2>Riviera JUG</h2>
+          <img src="./images/rivierajug.png"/>
+        </div>
+        <div class="date">06 février 2018</div>
+          <p>Présentation de la base de données <b>Hazelcast</b> par <b>Neil Stevenson</b>.</p>
+          <a class="bnt-more" href="http://rivierajug.org/xwiki/bin/view/Main/201802-hazelcast">More</a>
+        </div>
+      </div>   
 
       <!--
       <div class="timeline-item">
