--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
       
       <div class="timeline-item">
         <div class="timeline-img"></div>
-        <div class="timeline-content js--fadeInLeft">
+        <div class="timeline-content timeline-card js--fadeInLeft">
+        <div class="timeline-img-header">
           <h2>Meetup CNCF</h2>
-          <img src="./images/cncf.png"/>
+          <img src="./images/cncf.png">
+          </div>
        	  <div class="date">29 janvier 2018</div>
             <p><b>Cédric Lamorinière</b> et <b>David Benque</b> vous présenterons <b>Prometheus</b> une solution de monitoring pour le système et les applications</p>
             <a class="bnt-more" href="https://www.meetup.com/fr-FR/CNCF-Cloud-Native-Computing-Sophia-Antipolis/events/246424155/">More</a>
