--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <title>Vertical Timeline</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100i,300,400,500,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
-
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
     <div class="container text-center">
-      <h1>Upcoming technical events in Sophia-Antipolis</h1>
+      <h1>Technical events in #SophiaAntipolis</h1>
+      <p>...in one single place</p>
     </div>
   </header>
 
@@ -81,6 +80,32 @@
         <div class="date">06 février 2018</div>
           <p>Présentation de la base de données <b>Hazelcast</b> par <b>Neil Stevenson</b>.</p>
           <a class="bnt-more" href="http://rivierajug.org/xwiki/bin/view/Main/201802-hazelcast">More</a>
+        </div>
+      </div>   
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInLeft">
+        <div class="timeline-img-header">
+          <h2>Commission open source</h2>
+          <img src="./images/telecomvalley.png">
+          </div>
+       	  <div class="date">20 février 2018</div>
+            <p>Présentation de <b>Open Source Business Diagnostic</b> par <b>Jaime Arredondo</b> (BoldAndOpen.com)</p>
+            <a class="bnt-more" href="javascript:void(0);">à venir...</a>
+        </div>
+      </div> 
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInRight">
+        <div class="timeline-img-header">
+          <h2>Commission open source</h2>
+          <img src="./images/telecomvalley.png"/>
+        </div>
+        <div class="date">15 mars 2018</div>
+          <p>Introduction à la programmation fonctionnelle par <b>Yann Esposito</b>. Attention, <b>Haskell</b> au programme...</p>
+          <a class="bnt-more" href="javascript:void(0);">à venir...</a>
         </div>
       </div>   
 
