Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html >
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113065209-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-113065209-1');
+  </script>
   <meta charset="UTF-8">
   <title>Vertical Timeline</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100i,300,400,500,700" rel="stylesheet">
