--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113065209-1"></script>
   <script>
@@ -9,7 +9,7 @@
     gtag('config', 'UA-113065209-1');
   </script>
   <meta charset="UTF-8">
-  <title>Vertical Timeline</title>
+  <title>TechEvents@Sophia</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100i,300,400,500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
@@ -29,13 +29,10 @@
 
 
       <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content timeline-card">
-        <div class="timeline-img-header">
+        <div class="timeline-content">
+          <img src="./images/docker.png" width="60%"/>
           <h2>Meetup Docker / RivieraJug</h2>
-          <img src="./images/docker.png"/>
-        </div>
-        <div class="date">18/01/2018</div>
+          <div class="date">18/01/2018</div>
           <p>Anthony Lapenna</b> viendra nous présenter <b>Portainer</b> pour gérez vos environnements Docker en toute simplicité</p></p>
           <a class="bnt-more" href="https://www.meetup.com/fr-FR/Docker-Nice/events/245650434/">More</a>
         </div>
@@ -43,13 +40,10 @@
 
 
       <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content timeline-card">
-        <div class="timeline-img-header">
+        <div class="timeline-content">
+          <img src="./images/hashicorp.png" width="60%"/>
           <h2>Hashicorp User Group #2</h2>
-          <img src="./images/hashicorp.png"/>
-        </div>
-        <div class="date">23/01/2018</div>
+          <div class="date">23/01/2018</div>
           <p>Thomas Sarboni</b> fera une introduction à <b>Terraform</b>, <b>David Calvert</b> nous présentera <b>Vault</b></p>
           <a class="bnt-more" href="https://www.meetup.com/fr-FR/Sophia-Antipolis-HashiCorp-User-Group/events/246742297/">More</a>
         </div>
@@ -57,13 +51,10 @@
 
 
       <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content timeline-card">
-        <div class="timeline-img-header">
+        <div class="timeline-content">
+          <img src="./images/telecomvalley.png" width="60%"/>
           <h2>Commission Open Source</h2>
-          <img src="./images/telecomvalley.png"/>
-        </div>
-        <div class="date">25/01/2018</div>
+          <div class="date">25/01/2018</div>
           <p>Retour d'expérience sur l'utilisation de <b>Kafka</b> par <b>Sébastien Alegret</b> de GreenCom Network</p>
           <a class="bnt-more" href="http://telecom-valley.fr/25-janvier-commission-open-source/">More</a>
         </div>
@@ -71,13 +62,10 @@
 
 
       <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content timeline-card">
-        <div class="timeline-img-header">
+        <div class="timeline-content">
+          <img src="./images/cncf.png" width="60%"/>
           <h2>CNCF Sophia-Antipolis #1</h2>
-          <img src="./images/cncf.png"/>
-        </div>
-        <div class="date">29/01/2018</div>
+          <div class="date">29/01/2018</div>
           <p>Cédric Lamorinière</b> et <b>David Benque</b> vous présenterons <b>Prometheus</b> une solution de monitoring pour le système et les applications</p>
           <a class="bnt-more" href="https://www.meetup.com/fr-FR/CNCF-Cloud-Native-Computing-Sophia-Antipolis/events/246424155/">More</a>
         </div>
@@ -85,13 +73,10 @@
 
 
       <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content timeline-card">
-        <div class="timeline-img-header">
+        <div class="timeline-content">
+          <img src="./images/rivierajug.png" width="60%"/>
           <h2></h2>
-          <img src="./images/rivierajug.png"/>
-        </div>
-        <div class="date">06/02/2018</div>
+          <div class="date">06/02/2018</div>
           <p>Présentation de la base de données <b>Hazelcast</b> par <b>Neil Stevenson</b></p>
           <a class="bnt-more" href="http://rivierajug.org/xwiki/bin/view/Main/201802-hazelcast">More</a>
         </div>
@@ -99,13 +84,10 @@
 
 
       <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content timeline-card">
-        <div class="timeline-img-header">
+        <div class="timeline-content">
+          <img src="./images/telecomvalley.png" width="60%"/>
           <h2>Commission Open Source</h2>
-          <img src="./images/telecomvalley.png"/>
-        </div>
-        <div class="date">20/02/2018</div>
+          <div class="date">20/02/2018</div>
           <p>Présentation de <b>Open Source Business Diagnostic</b> par <b>Jaime Arredondo</b> (BoldAndOpen.com)</p>
           <a class="bnt-more" href="">More</a>
         </div>
@@ -113,13 +95,10 @@
 
 
       <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content timeline-card">
-        <div class="timeline-img-header">
+        <div class="timeline-content">
+          <img src="./images/telecomvalley.png" width="60%"/>
           <h2>Commission Open Source</h2>
-          <img src="./images/telecomvalley.png"/>
-        </div>
-        <div class="date">15/03/2018</div>
+          <div class="date">15/03/2018</div>
           <p>Introduction à la programmation fonctionnelle par <b>Yann Esposito</b>. Attention, <b>Haskell</b> au programme...</p>
           <a class="bnt-more" href="">More</a>
         </div>
@@ -127,13 +106,10 @@
 
 
       <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content timeline-card">
-        <div class="timeline-img-header">
+        <div class="timeline-content">
+          <img src="./images/rivieradev.jpg" width="60%"/>
           <h2></h2>
-          <img src="./images/rivieradev.jpg"/>
-        </div>
-        <div class="date">16-17-18/05/2018</div>
+          <div class="date">16-17-18/05/2018</div>
           <p><b>Riviera DEV</b> c'est <b>3 jours de conférences et d'ateliers</b> sur un large panel de sujets : langages de programmation, Front-end & UX, Mobile & IoT, Big Data & Machine Learning, Containers & DevOps, Performance, Agilité ...</p>
           <a class="bnt-more" href="http://rivieradev.fr">More</a>
         </div>
