Move logos to corner of each card

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
 
       <div class="timeline-item">
+        <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img src="./images/docker.png" width="60%"/>
+          <img class="logo" src="./images/docker.png" />
           <h2>Meetup Docker / RivieraJug</h2>
           <div class="date">18/01/2018</div>
           <p>Anthony Lapenna</b> viendra nous présenter <b>Portainer</b> pour gérez vos environnements Docker en toute simplicité</p></p>
@@ -40,8 +41,9 @@
 
 
       <div class="timeline-item">
+        <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img src="./images/hashicorp.png" width="60%"/>
+          <img class="logo" src="./images/hashicorp.png" />
           <h2>Hashicorp User Group #2</h2>
           <div class="date">23/01/2018</div>
           <p>Thomas Sarboni</b> fera une introduction à <b>Terraform</b>, <b>David Calvert</b> nous présentera <b>Vault</b></p>
@@ -51,8 +53,9 @@
 
 
       <div class="timeline-item">
+        <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img src="./images/telecomvalley.png" width="60%"/>
+          <img class="logo" src="./images/telecomvalley.png" />
           <h2>Commission Open Source</h2>
           <div class="date">25/01/2018</div>
           <p>Retour d'expérience sur l'utilisation de <b>Kafka</b> par <b>Sébastien Alegret</b> de GreenCom Network</p>
@@ -62,8 +65,9 @@
 
 
       <div class="timeline-item">
+        <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img src="./images/cncf.png" width="60%"/>
+          <img class="logo" src="./images/cncf.png" />
           <h2>CNCF Sophia-Antipolis #1</h2>
           <div class="date">29/01/2018</div>
           <p>Cédric Lamorinière</b> et <b>David Benque</b> vous présenterons <b>Prometheus</b> une solution de monitoring pour le système et les applications</p>
@@ -73,8 +77,9 @@
 
 
       <div class="timeline-item">
+        <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img src="./images/rivierajug.png" width="60%"/>
+          <img class="logo" src="./images/rivierajug.png" />
           <h2></h2>
           <div class="date">06/02/2018</div>
           <p>Présentation de la base de données <b>Hazelcast</b> par <b>Neil Stevenson</b></p>
@@ -84,8 +89,9 @@
 
 
       <div class="timeline-item">
+        <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img src="./images/telecomvalley.png" width="60%"/>
+          <img class="logo" src="./images/telecomvalley.png" />
           <h2>Commission Open Source</h2>
           <div class="date">20/02/2018</div>
           <p>Présentation de <b>Open Source Business Diagnostic</b> par <b>Jaime Arredondo</b> (BoldAndOpen.com)</p>
@@ -95,8 +101,9 @@
 
 
       <div class="timeline-item">
+        <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img src="./images/telecomvalley.png" width="60%"/>
+          <img class="logo" src="./images/telecomvalley.png" />
           <h2>Commission Open Source</h2>
           <div class="date">15/03/2018</div>
           <p>Introduction à la programmation fonctionnelle par <b>Yann Esposito</b>. Attention, <b>Haskell</b> au programme...</p>
@@ -106,12 +113,25 @@
 
 
       <div class="timeline-item">
+        <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img src="./images/rivieradev.jpg" width="60%"/>
+          <img class="logo" src="./images/rivieradev.jpg" />
           <h2></h2>
           <div class="date">16-17-18/05/2018</div>
           <p><b>Riviera DEV</b> c'est <b>3 jours de conférences et d'ateliers</b> sur un large panel de sujets : langages de programmation, Front-end & UX, Mobile & IoT, Big Data & Machine Learning, Containers & DevOps, Performance, Agilité ...</p>
           <a class="bnt-more" href="http://rivieradev.fr">More</a>
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/sophiaconf2018.png" />
+          <h2></h2>
+          <div class="date">2-5/07/2018</div>
+          <p>3 soirées de talks et une journée entièrement dédiée à des workshops techniques. Au programme cette année: AI, DevOps et Cloud, IoT. Les CFPs sont ouverts !</p>
+          <a class="bnt-more" href="http://telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">More</a>
         </div>
       </div>   
 
