Do not use jquery

--- a/www/past.html
+++ b/www/past.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Security-Policy"
-        content="default-src maxcdn.bootstrapcdn.com 'self';script-src code.jquery.com cdn.jsdelivr.net www.googletagmanager.com 'unsafe-inline' 'self';style-src fonts.googleapis.com maxcdn.bootstrapcdn.com 'self';font-src fonts.gstatic.com fonts.googleapis.com maxcdn.bootstrapcdn.com 'self'">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113065209-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -90,7 +88,7 @@
   </section>
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
   <script src='https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js'></script>
-  <script src="js/index.js"></script>
+  <!-- <script src="js/index.js"></script> //-->
 
 </body>
 </html>
