--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,18 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/meetup.png" />
+          <h2></h2>
+          <div class="date">Le 09/02 de 14h à 16h</div>
+          <p>Découvrez le Garage IBM Cloud et les concepts UX à Nice Meridia au CEEI</p>
+            <a class="bnt-more" href="https://www.meetup.com/fr-FR/IBM-Bluemix-Nice-Meetup/events/247317977">More</a>
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <h2></h2>
           <div class="date">20/02 à 12h</div>
@@ -70,6 +82,7 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/meetup.png" />
           <h2>Développement Mobile Côte-d'Azur</h2>
           <div class="date">21/02 à 18h30</div>
           <p>#21: Reactive programming</p>
@@ -105,6 +118,7 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/meetup.png" />
           <h2>Développement Mobile Côte-d'Azur</h2>
           <div class="date">28/03 à 18h30</div>
           <p>#22</p>
