--- a/www/index.html
+++ b/www/index.html
@@ -34,35 +34,11 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img class="logo" src="./images/telecomvalley-csc.png" />
-          <h2></h2>
-          <div class="date">06/02 à 12h</div>
-          <p>Cloud, virtualisation, microservices, conteneurs… quelles sont les bonnes pratiques de sécurité ? par <b>Serge HARTMANN</b> de <b>ACP Qualife</b></p>
-            <a class="bnt-more" href="http://telecom-valley.fr/6-fevrier-commission-securite-cloud">More</a>
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
-          <img class="logo" src="./images/rivierajug.png" />
-          <h2></h2>
-          <div class="date">06/02 à 18h</div>
-          <p>Présentation de la base de données <b>Hazelcast</b> par <b>Neil Stevenson</b></p>
-            <a class="bnt-more" href="http://rivierajug.org/xwiki/bin/view/Main/201802-hazelcast">More</a>
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
-          <img class="logo" src="./images/meetup.png" />
-          <h2></h2>
-          <div class="date">Le 09/02 de 14h à 16h</div>
-          <p>Découvrez le Garage IBM Cloud et les concepts UX à Nice Meridia au CEEI</p>
-            <a class="bnt-more" href="https://www.meetup.com/fr-FR/IBM-Bluemix-Nice-Meetup/events/247317977">More</a>
+          <img class="logo" src="./images/telecomvalley-cos.png" />
+          <h2>Soirée blockchain</h2>
+          <div class="date">15/02 à 18h</div>
+          <p>Parce que les blockchains sont au coeur de l’actualité et suscitent beaucoup de curiosité, la communauté Open Source vous propose une double soirée TechEvent dédiée à ce thème.</p>
+            <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/15-fevrier-tech-conf-blockchain/">More</a>
         </div>
       </div>   
 
@@ -74,7 +50,7 @@
           <h2></h2>
           <div class="date">20/02 à 12h</div>
           <p>Présentation de <b>Open Source Business Diagnostic</b> par <b>Jaime Arredondo</b> (BoldAndOpen.com)</p>
-            <a class="bnt-more" href="javascript:void(0);">A venir...</a>
+            <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/20-fevrier-commission-open-source/">More</a>
         </div>
       </div>   
 
@@ -86,7 +62,7 @@
           <h2>Développement Mobile Côte-d'Azur</h2>
           <div class="date">21/02 à 18h30</div>
           <p>#21: Reactive programming</p>
-            <a class="bnt-more" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/gszvcpyxdbcc/">More</a>
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/gszvcpyxdbcc/">More</a>
         </div>
       </div>   
 
@@ -98,7 +74,7 @@
           <h2>Google Hash Code 2018</h2>
           <div class="date">01/03 à 18h</div>
           <p>Comme tous les ans, Google organise le Hash Code, une compétition de programmation en équipe pour résoudre un problème d’ingénierie de la vie réelle de Google</p>
-            <a class="bnt-more" href="https://www.meetup.com/fr-FR/GDGNice/events/245187635/">More</a>
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/245187635/">More</a>
         </div>
       </div>   
 
@@ -146,7 +122,7 @@
           <h2></h2>
           <div class="date">Du 16 au 18/05</div>
           <p><b>Riviera DEV</b> c'est <b>3 jours de conférences et d'ateliers</b> sur un large panel de sujets : langages de programmation, Front-end & UX, Mobile & IoT, Big Data & Machine Learning, Containers & DevOps, Performance, Agilité ...</p>
-            <a class="bnt-more" href="http://rivieradev.fr">More</a>
+            <a class="bnt-more" target="_blank" href="http://rivieradev.fr">More</a>
         </div>
       </div>   
 
@@ -158,7 +134,7 @@
           <h2></h2>
           <div class="date">Du 2 au 5/07</div>
           <p>3 soirées de talks et une journée entièrement dédiée à des workshops techniques. Au programme cette année: AI, DevOps et Cloud, IoT. Les CFPs sont ouverts !</p>
-            <a class="bnt-more" href="http://telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">More</a>
+            <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">More</a>
         </div>
       </div>   
 
