Small updates of the style

--- a/www/index.html
+++ b/www/index.html
@@ -14,8 +14,8 @@
 <body>
   <menu>
     <ul id="nav">
-      <li><a href="./index.html">Upcoming</a></li>
-      <li><a href="./past.html">Past</a></li>
+      <li><a href="./index.html">Upcoming events</a></li>
+      <li><a href="./past.html">Past events</a></li>
       <li><a href="https://github.com/lucj/sophia.events/issues/new" target="_blank">Submit an event (via GitHub)</a></li>
     </ul> 
   </menu>
@@ -23,7 +23,6 @@
   <header>
     <div class="container text-center">
       <h1>Technical events in #SophiaAntipolis</h1>
-      <p>...in one single place</p>
     </div>
   </header>
 
@@ -36,7 +35,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <h2>Soirée blockchain</h2>
-          <div class="date">15/02 à 18h</div>
+          <div class="date">15 février à 18h</div>
           <p>Parce que les blockchains sont au coeur de l’actualité et suscitent beaucoup de curiosité, la communauté Open Source vous propose une double soirée TechEvent dédiée à ce thème.</p>
             <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/15-fevrier-tech-conf-blockchain/">More</a>
         </div>
@@ -48,7 +47,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <h2></h2>
-          <div class="date">20/02 à 12h</div>
+          <div class="date">20 février à 12h</div>
           <p>Présentation de <b>Open Source Business Diagnostic</b> par <b>Jaime Arredondo</b> (BoldAndOpen.com)</p>
             <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/20-fevrier-commission-open-source/">More</a>
         </div>
@@ -58,9 +57,21 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/telecomvalley-cos.png" />
+          <h2>Tech Workshop Blockchain</h2>
+          <div class="date">21 février à 17h30</div>
+          <p><b>Raed Chamman</b> (Softeam) vous permettra d'approfondir et de mettre en application les <b>smart contracts</b> sur <b>Ethereum</b> lors d'une session Workshop</p>
+            <a class="bnt-more" target="_blank" href="https://www.eventbrite.fr/e/billets-tech-workshop-blockchain-telecom-valley-43165173195">More</a>
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
           <h2>Développement Mobile Côte-d'Azur</h2>
-          <div class="date">21/02 à 18h30</div>
+          <div class="date">21 février à 18h30</div>
           <p>#21: Reactive programming</p>
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/gszvcpyxdbcc/">More</a>
         </div>
@@ -72,7 +83,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/google.png" />
           <h2>Google Hash Code 2018</h2>
-          <div class="date">01/03 à 18h</div>
+          <div class="date">01 mars à 18h</div>
           <p>Comme tous les ans, Google organise le Hash Code, une compétition de programmation en équipe pour résoudre un problème d’ingénierie de la vie réelle de Google</p>
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/245187635/">More</a>
         </div>
@@ -84,9 +95,9 @@
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <h2></h2>
-          <div class="date">15/03 à 12h</div>
+          <div class="date">15 mars à 12h</div>
           <p>Introduction à la programmation fonctionnelle par <b>Yann Esposito</b>. Attention, <b>Haskell</b> au programme...</p>
-            <a class="bnt-more" href="javascript:void(0);">A venir...</a>
+            <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
         </div>
       </div>   
 
@@ -96,9 +107,9 @@
         <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
           <h2>Développement Mobile Côte-d'Azur</h2>
-          <div class="date">28/03 à 18h30</div>
+          <div class="date">28 mars à 18h30</div>
           <p>#22</p>
-            <a class="bnt-more" href="javascript:void(0);">A venir...</a>
+            <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
         </div>
       </div>   
 
@@ -108,9 +119,9 @@
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <h2></h2>
-          <div class="date">12/04 à 12h</div>
+          <div class="date">12 avril à 12h</div>
           <p><b>Rémy Coutable</b> de GitLab viendra nous présenter <b>Gitlab-CI</b></p>
-            <a class="bnt-more" href="javascript:void(0);">A venir...</a>
+            <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
         </div>
       </div>   
 
@@ -120,7 +131,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/rivieradev.png" />
           <h2></h2>
-          <div class="date">Du 16 au 18/05</div>
+          <div class="date">Du 16 au 18 mai</div>
           <p><b>Riviera DEV</b> c'est <b>3 jours de conférences et d'ateliers</b> sur un large panel de sujets : langages de programmation, Front-end & UX, Mobile & IoT, Big Data & Machine Learning, Containers & DevOps, Performance, Agilité ...</p>
             <a class="bnt-more" target="_blank" href="http://rivieradev.fr">More</a>
         </div>
@@ -132,7 +143,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/sophiaconf2018.png" />
           <h2></h2>
-          <div class="date">Du 2 au 5/07</div>
+          <div class="date">Du 2 au 5 juillet</div>
           <p>3 soirées de talks et une journée entièrement dédiée à des workshops techniques. Au programme cette année: AI, DevOps et Cloud, IoT. Les CFPs sont ouverts !</p>
             <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">More</a>
         </div>
