--- a/www/past.html
+++ b/www/past.html
@@ -14,8 +14,8 @@
 <body>
   <menu>
     <ul id="nav">
-      <li><a href="./index.html">Upcoming</a></li>
-      <li><a href="./past.html">Past</a></li>
+      <li><a href="./index.html">Upcoming events</a></li>
+      <li><a href="./past.html">Past events</a></li>
       <li><a href="https://github.com/lucj/sophia.events/issues/new" target="_blank">Submit an event (via GitHub)</a></li>
     </ul> 
   </menu>
@@ -23,7 +23,6 @@
   <header>
     <div class="container text-center">
       <h1>Technical events in #SophiaAntipolis</h1>
-      <p>...in one single place</p>
     </div>
   </header>
 
@@ -36,7 +35,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
           <h2></h2>
-          <div class="date">Le 09/02 de 14h à 16h</div>
+          <div class="date">09 février de 14h à 16h</div>
           <p>Découvrez le Garage IBM Cloud et les concepts UX à Nice Meridia au CEEI</p>
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/IBM-Bluemix-Nice-Meetup/events/247317977">More</a>
         </div>
@@ -48,7 +47,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/rivierajug.png" />
           <h2></h2>
-          <div class="date">06/02 à 18h</div>
+          <div class="date">06 février à 18h</div>
           <p>Présentation de la base de données <b>Hazelcast</b> par <b>Neil Stevenson</b></p>
             <a class="bnt-more" target="_blank" href="http://rivierajug.org/xwiki/bin/view/Main/201802-hazelcast">More</a>
         </div>
@@ -60,7 +59,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-csc.png" />
           <h2></h2>
-          <div class="date">06/02 à 12h</div>
+          <div class="date">06 février à 12h</div>
           <p>Cloud, virtualisation, microservices, conteneurs… quelles sont les bonnes pratiques de sécurité ? par <b>Serge HARTMANN</b> de <b>ACP Qualife</b></p>
             <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/6-fevrier-commission-securite-cloud">More</a>
         </div>
@@ -72,7 +71,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/cncf-sophia.png" />
           <h2></h2>
-          <div class="date">29/01 à 17h30</div>
+          <div class="date">29 janvier à 17h30</div>
           <p>Cédric Lamorinière</b> et <b>David Benque</b> vous présenterons <b>Prometheus</b> une solution de monitoring pour le système et les applications</p>
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/CNCF-Cloud-Native-Computing-Sophia-Antipolis/events/246424155/">More</a>
         </div>
@@ -84,7 +83,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <h2></h2>
-          <div class="date">25/01 à 12h</div>
+          <div class="date">25 janvier à 12h</div>
           <p>Retour d'expérience sur l'utilisation de <b>Kafka</b> par <b>Sébastien Alegret</b> de GreenCom Network</p>
             <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/25-janvier-commission-open-source/">More</a>
         </div>
@@ -96,7 +95,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/hashicorp.png" />
           <h2>Hashicorp User Group #2</h2>
-          <div class="date">23/01 à 18h</div>
+          <div class="date">23 janvier à 18h</div>
           <p>Thomas Sarboni</b> fera une introduction à <b>Terraform</b>, <b>David Calvert</b> nous présentera <b>Vault</b></p>
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Sophia-Antipolis-HashiCorp-User-Group/events/246742297/">More</a>
         </div>
@@ -108,7 +107,7 @@
         <div class="timeline-content">
           <img class="logo" src="./images/docker.png" />
           <h2>Meetup Docker / RivieraJug</h2>
-          <div class="date">18/01 à 18h</div>
+          <div class="date">18 janvier à 18h</div>
           <p>Anthony Lapenna</b> viendra nous présenter <b>Portainer</b> pour gérez vos environnements Docker en toute simplicité</p></p>
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/245650434/">More</a>
         </div>
