--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
           <h2>Soirée blockchain</h2>
           <div class="date">15 février à 18h</div>
           <p>Parce que les blockchains sont au coeur de l’actualité et suscitent beaucoup de curiosité, la communauté Open Source vous propose une double soirée TechEvent dédiée à ce thème.</p>
-            <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/15-fevrier-tech-conf-blockchain/">More</a>
+            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/15-fevrier-2018-tech-conf-blockchain/">More</a>
         </div>
       </div>   
 
@@ -46,7 +46,7 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
-          <h2></h2>
+          <h2>Gestion d'un projet open source</h2>
           <div class="date">20 février à 12h</div>
           <p>Présentation de <b>Open Source Business Diagnostic</b> par <b>Jaime Arredondo</b> (BoldAndOpen.com)</p>
             <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/20-fevrier-commission-open-source/">More</a>
@@ -94,7 +94,7 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
-          <h2></h2>
+          <h2>Programmation fonctionnelle</h2>
           <div class="date">15 mars à 12h</div>
           <p>Introduction à la programmation fonctionnelle par <b>Yann Esposito</b>. Attention, <b>Haskell</b> au programme...</p>
             <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
@@ -118,7 +118,7 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
-          <h2></h2>
+          <h2>Intégration continue avec GitLab-CI</h2>
           <div class="date">12 avril à 12h</div>
           <p><b>Rémy Coutable</b> de GitLab viendra nous présenter <b>Gitlab-CI</b></p>
             <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
@@ -130,7 +130,7 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/rivieradev.png" />
-          <h2></h2>
+          <h2>RivieraDev édition 2018</h2>
           <div class="date">Du 16 au 18 mai</div>
           <p><b>Riviera DEV</b> c'est <b>3 jours de conférences et d'ateliers</b> sur un large panel de sujets : langages de programmation, Front-end & UX, Mobile & IoT, Big Data & Machine Learning, Containers & DevOps, Performance, Agilité ...</p>
             <a class="bnt-more" target="_blank" href="http://rivieradev.fr">More</a>
@@ -142,7 +142,7 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/sophiaconf2018.png" />
-          <h2></h2>
+          <h2>SophiaConf édition 2018</h2>
           <div class="date">Du 2 au 5 juillet</div>
           <p>3 soirées de talks et une journée entièrement dédiée à des workshops techniques. Au programme cette année: AI, DevOps et Cloud, IoT. Les CFPs sont ouverts !</p>
             <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">More</a>
