--- a/www/past.html
+++ b/www/past.html
@@ -34,7 +34,7 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
-          <h2></h2>
+          <h2>Garage IBM Cloud</h2>
           <div class="date">09 février de 14h à 16h</div>
           <p>Découvrez le Garage IBM Cloud et les concepts UX à Nice Meridia au CEEI</p>
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/IBM-Bluemix-Nice-Meetup/events/247317977">More</a>
@@ -46,9 +46,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/rivierajug.png" />
-          <h2></h2>
+          <h2>Présentation de Hazelcast</h2>
           <div class="date">06 février à 18h</div>
-          <p>Présentation de la base de données <b>Hazelcast</b> par <b>Neil Stevenson</b></p>
+          <p><b>Neil Stevenson</b> présentera la base de données <b>Hazelcast</b></p>
             <a class="bnt-more" target="_blank" href="http://rivierajug.org/xwiki/bin/view/Main/201802-hazelcast">More</a>
         </div>
       </div>   
@@ -58,10 +58,10 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-csc.png" />
-          <h2></h2>
+          <h2>Sécurité des applications cloud native</h2>
           <div class="date">06 février à 12h</div>
           <p>Cloud, virtualisation, microservices, conteneurs… quelles sont les bonnes pratiques de sécurité ? par <b>Serge HARTMANN</b> de <b>ACP Qualife</b></p>
-            <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/6-fevrier-commission-securite-cloud">More</a>
+            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/6-fevrier-2018-commission-securite-cloud/">More</a>
         </div>
       </div>   
 
@@ -70,7 +70,7 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/cncf-sophia.png" />
-          <h2></h2>
+          <h2>Sophia CNCF #1</h2>
           <div class="date">29 janvier à 17h30</div>
           <p>Cédric Lamorinière</b> et <b>David Benque</b> vous présenterons <b>Prometheus</b> une solution de monitoring pour le système et les applications</p>
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/CNCF-Cloud-Native-Computing-Sophia-Antipolis/events/246424155/">More</a>
@@ -82,7 +82,7 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
-          <h2></h2>
+          <h2>Kafka par GreenCom Network</h2>
           <div class="date">25 janvier à 12h</div>
           <p>Retour d'expérience sur l'utilisation de <b>Kafka</b> par <b>Sébastien Alegret</b> de GreenCom Network</p>
             <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/25-janvier-commission-open-source/">More</a>
